fix: Functional version with Point structure.

--- a/cuda/Makefile
+++ b/cuda/Makefile
@@ -1,8 +1,9 @@
 CC = nvcc
-CXXFLAGS = -Iinclude --expt-relaxed-constexpr -Wno-deprecated-gpu-targets -g -G -rdc=true
+CXXFLAGS = -std=c++20 -Iinclude --expt-relaxed-constexpr -Wno-deprecated-gpu-targets -g -G -rdc=true
+MAIN = main.cpp
 CPP_FILES = $(wildcard src/*.cpp)
 CU_FILES = $(wildcard src/*.cu)
-OBJ_FILES = $(CPP_FILES:.cpp=.o) $(CU_FILES:.cu=.o)
+OBJ_FILES = $(CPP_FILES:.cpp=.o) $(CU_FILES:.cu=.o) $(MAIN:.cpp=.o)
 
 %.o: %.cpp
 	$(CC) $(CXXFLAGS) -dc $< -o $@
