--- a/cuda/CMakeLists.txt
+++ b/cuda/CMakeLists.txt
@@ -8,13 +8,12 @@ enable_language(CUDA)
 set(CMAKE_CUDA_STANDARD 20)
 
 find_package(CUDAToolkit REQUIRED)
+find_package(benchmark REQUIRED)
 
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
-
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -Wall -lineinfo -g -G --expt-relaxed-constexpr -rdc=true -Wno-deprecated-gpu-targets")
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -Wall -lineinfo --expt-relaxed-constexpr -rdc=true -Wno-deprecated-gpu-targets")
 
 include_directories(include)
 include_directories(${CUDAToolkit_INCLUDE_DIRS})
@@ -31,7 +30,9 @@ set(SOURCES
         src/area_filtering.cu
         src/depth_image_c.cpp
         src/depth_image.cu
-        main.cpp
+        cpp/main.cpp
+        cpp/for_benchmark.cpp
+        #src/benchmark_area.cu
 )
 
 set(HEADERS
@@ -47,6 +48,8 @@ set(HEADERS
         include/depth_image.cuh
         include/utils.hpp
         include/vector2D.cuh
+        cpp/for_benchmark.hpp
+        #include/benchmark_area.cuh
 )
 
 add_executable(LRE_Axel ${SOURCES} ${HEADERS})
@@ -57,8 +60,10 @@ set_target_properties(LRE_Axel PROPERTIES
 )
 
 target_link_libraries(LRE_Axel PRIVATE CUDA::cudart ${OpenCV_LIBS})
+target_link_libraries(LRE_Axel PRIVATE benchmark::benchmark)
+target_link_libraries(LRE_Axel PRIVATE benchmark::benchmark_main)
 
 target_compile_options(LRE_Axel PRIVATE
-        $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr -rdc=true -g -G -Wno-deprecated-gpu-targets>
-        $<$<COMPILE_LANGUAGE:CXX>:-g>
+        $<$<COMPILE_LANGUAGE:CUDA>:--expt-relaxed-constexpr -rdc=true -Wno-deprecated-gpu-targets>
+        $<$<COMPILE_LANGUAGE:CXX>:>
 )
